--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "url": "https://github.com/ekayzl/comprar-site-backend/issues"
   },
   "homepage": "https://github.com/ekayzl/comprar-site-backend#readme",
-  "description": "",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "mercadopago": "^2.4.0"
-  }
+  },
+  "description": ""
 }
