--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "modoPagamento": "mercadopago",
-    "tokenMercadoPago": "SEU_TOKEN_AQUI",
+    "tokenMercadoPago": "",
     "whatsappManual": "https://wa.me/5511999999999",
     "mostrarUpsell": true,
     "popupAtivado": true
